#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */
typedef  struct TYPE_4__   TYPE_2__ ;
typedef  struct TYPE_3__   TYPE_1__ ;

/* Type definitions */
struct TYPE_4__ {TYPE_1__* cheats; } ;
struct TYPE_3__ {char const* code; } ;

/* Variables and functions */
 TYPE_2__ cheat_manager_state ; 

const char *cheat_manager_get_code(unsigned i)
{
   if (!cheat_manager_state.cheats)
      return NULL;
   return cheat_manager_state.cheats[i].code;
}